--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;500;600;700&display=swap"
+        rel="stylesheet"/>
+    <link rel="stylesheet" href="styles.css" />
     <script src="app.js" type="module" defer></script>
 </head>
 <body>
-    <h1>HELLO REACT.WELCOME TO PARCEL..!</h1>
+    <!-- <h1>HELLO REACT.WELCOME TO MY APP WHICH IS USING PARCEL..!</h1> -->
+    <div id="root">Not Rendered</div>
 </body>
 </html>
